--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "kafkajs": "^2.2.4",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
